[gd_scene load_steps=2 format=3 uid="uid://cv85um35dllay"]

[ext_resource type="Script" path="res://hunger_display.gd" id="1_j4on0"]

[node name="StatusDisplay" type="Control"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_right = 203.0
offset_bottom = 100.0
script = ExtResource("1_j4on0")

[node name="HungerBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = 76.0
offset_right = 239.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0.553153, 0.325127, 0.176366, 1)

[node name="HungerLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 53.0
offset_right = 59.0
offset_bottom = 76.0
text = "Hunger"

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = 28.0
offset_right = 241.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(1, 0, 0, 1)

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = 3.0
offset_right = 50.0
offset_bottom = 26.0
text = "Health
"
